# ParaCL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compiler.sh  default.nix  flake.nix  paracl.cpp
.direnv/: nix-profile-unknown  nix-profile-unknown.rc
examples/: examples.cpp  tests.hpp
examples/data/: fibonachi.txt  gcd.txt  lcm.txt  prime_factors.txt  print.txt  scan.txt
examples/interactive_tests/: interactive_tests.cpp
examples/interactive_tests/data/: fibonachi.txt
examples/unit/: base_operations.cpp  ctrl_statements.cpp  primitives.cpp
examples/unit/data/: ariphmetic.txt  if.txt  scan1.txt  scan2.txt  scope1.txt  scope3.txt  simple_assignment.txt  while_if.txt
frontend/ast/: assignment.hpp  ast.hpp  ast_includes.hpp  base_type.hpp  definition.hpp  expression.hpp  function.hpp  identifiers.hpp  integer_variable.hpp  object_type.hpp  operator.hpp  primitives.hpp  statement.hpp  statement_block.hpp  types.hpp
frontend/ast/include/: ast.hpp  definition.hpp  expression.hpp  function.hpp  identifiers.hpp  operator.hpp  statement.hpp
frontend/ast/src/: ast.cpp  definition.cpp  expression.cpp  function.cpp  operator.cpp  statement.cpp
frontend/include/: syntax.hpp
frontend/parsing/: lexer.l  parser.y
frontend/parsing/include/: driver.hpp  scanner.hpp
frontend/parsing/src/: driver.cc
frontend/symbol_tab/: symbol_table.hpp
frontend/symbol_tab/include/: symbol_table.hpp
frontend/symbol_tab/src/: symbol_table.cpp
frontend/visitor/: visitor.hpp
frontend/visitor/include/: error_handler.hpp  forward_decls.hpp  interpreter.hpp  print_visitor.hpp  visitor.hpp
frontend/visitor/src/: interpreter.cpp  print_visitor.cpp  visitor.cpp
include/: CMakeLists.txt  option_category.hpp  types.hpp
include/ast/: array.hpp  ast.hpp  ast_includes.hpp  definition.hpp  expression.hpp  function.hpp  identifiers.hpp  operator.hpp  statement.hpp
include/codegen/: codegen.hpp  utils.hpp
include/parsing/: driver.hpp  scanner.hpp
include/semantics/: semantic_context.hpp  types.hpp  values.hpp
include/symbol_tab/: symbol_table.hpp
include/visitor/: codegen_visitor.hpp  error_handler.hpp  forward_decls.hpp  interpreter.hpp  visitor.hpp  visitor_tracker.hpp
lib/: codegen.cpp  option_category.cpp  utils.cpp
lib/ast/: ast.cpp  expression.cpp
lib/parsing/: driver.cpp  lexer.l  paracl_compiler.cpp  paracl_interpreter.cpp  parser.y
lib/semantics/: semantic_context.cpp
lib/std_pcl_lib/: pcllib.cpp
lib/symbol_tab/: symbol_table.cpp
lib/visitor/: codegen_visitor.cpp  error_handler.cpp  interpreter.cpp  visitor_tracker.cpp
parsing/: lexer.l  parser.y
tests/: ariphmetic.test  chainable_assignment.test  fibonachi.test  gcd.test  if.test  invalid-file-name-error.test  invalid-scan-value.test  lcm.test  lit.cfg.py  prime_factors.test  print.test  scan.test  scan1.test  scan2.test  scolon1.test  scolon2.test  scope1.test  scope2.test  scope3.test  simple_assignment.test  tests.hpp  undef-var-error.test  use-var-out-of-scope-error.test  while.test  while_if.test
tests/array/: array-assignment-error.test  array-creation-different-cases.test  array-rotation.test  array-sort.test  binary-search.test  copy-construct-array-error.test  count-even-numbers.test  empty-array.test  find-duplicate.test  find-max-in-array.test  kadane-algorithm.test  longest-consecutive-sequence.test  matrix-multiplication.test  multiple-dimensional-array.test  one-dimensional-array.test  preset-array-invalid-elem-error.test  preset-array-simple.test  preset-array-with-repeat.test  print-array-error.test  print-array.test  repeat-array-with-preset-array.test  selection-sorting.test  sieve-of-eratosthenes.test  subscripted-array-error.test  transpose-matrix.test  wrong-access-index-error.test
tests/interactive/: interactive_tests.cpp
tests/interactive/data/: print.txt
tests/unit/: base_operations.cpp  ctrl_statements.cpp  primitives.cpp
tests/unit/data/: chainable_assignment.txt  scolon2.txt  scope2.txt  while.txt
